<resources>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_k">로그인</string>
    <string name="register_k">SG마켓 회원가입</string>
    <string name="find_password_k">비밀번호 찾기</string>
    <string name="app_name">SaGi-Market</string>
    <string name="name_k">이름</string>
    <string name="email_k">이메일</string>
    <string name="password_k">비밀번호</string>
    <string name="password_check_k">비밀번호 확인</string>
    <string name="register_k_">가입하기</string>
    <string name="register_ask">회원가입이 되어있으신가요? </string>
    <string name="login_k_">로그인 하기</string>
    <string name="confirm_k">확인</string>
    <string name="go_uprode">게시물 등록하러 가기</string>
    <string name="not_purchase">구매한 상품이 없어요</string>
    <string name="have_purchase">내가 구매한 상품이에요</string>
    <string name="btn_review">후기작성하기</string>
    <string name="btn_modify">수정하기</string>
    <string name="btn_finish">완료</string>
    <string name="review">후기 작성하기</string>
    <string name="edit_review">후기를 작성해주세요</string>
    <string name="satisfaction_1">님과의 거래는</string>
    <string name="satisfaction_2">어떠셨나요?</string>
    <string name="transaction">나와의 거래후 남긴 후기에요</string>
</resources>