<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_rogo_t"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.096" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_et_name_t"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.359" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_et_email_t"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.431" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_et_password_t"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.509" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_et_password_check_t"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.589" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_btn_register_t"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.658" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_tv_ask_t"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.737" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_rogo_b"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.328" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_et_name_b"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.405" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_et_email_b"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.477" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_et_password_b"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.555" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_et_password_check_b"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.635" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_btn_register_b"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.704" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_tv_ask_b"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.758" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_rogo_s"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.269" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_et_s"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.152" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_tv_ask_s"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.21" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_rogo_e"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.731" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_et_e"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.848" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_tv_ask_e"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.61" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_tv_login_e"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.771" />


    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/sg"
        app:layout_constraintTop_toTopOf="@id/g_rogo_t"
        app:layout_constraintBottom_toBottomOf="@id/g_rogo_b"
        app:layout_constraintStart_toStartOf="@id/g_rogo_s"
        app:layout_constraintEnd_toEndOf="@id/g_rogo_e" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/name_k"
        android:textSize="14sp"
        android:inputType="textPersonName"
        app:layout_constraintTop_toTopOf="@id/g_et_name_t"
        app:layout_constraintBottom_toBottomOf="@id/g_et_name_b"
        app:layout_constraintStart_toStartOf="@id/g_et_s"
        app:layout_constraintEnd_toEndOf="@id/g_et_e" />
    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/email_k"
        android:textSize="14sp"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toTopOf="@id/g_et_email_t"
        app:layout_constraintBottom_toBottomOf="@id/g_et_email_b"
        app:layout_constraintStart_toStartOf="@id/g_et_s"
        app:layout_constraintEnd_toEndOf="@id/g_et_e"/>
    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/password_k"
        android:textSize="14sp"
        android:inputType="textPassword"
        app:layout_constraintTop_toTopOf="@id/g_et_password_t"
        app:layout_constraintBottom_toBottomOf="@id/g_et_password_b"
        app:layout_constraintStart_toStartOf="@id/g_et_s"
        app:layout_constraintEnd_toEndOf="@id/g_et_e"/>
    <EditText
        android:id="@+id/et_password_check"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/password_check_k"
        android:textSize="14sp"
        android:inputType="textPassword"
        app:layout_constraintTop_toTopOf="@id/g_et_password_check_t"
        app:layout_constraintBottom_toBottomOf="@id/g_et_password_check_b"
        app:layout_constraintStart_toStartOf="@id/g_et_s"
        app:layout_constraintEnd_toEndOf="@id/g_et_e"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#3e3f42"
        android:text="@string/register_k_"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/g_btn_register_t"
        app:layout_constraintBottom_toBottomOf="@id/g_btn_register_b"
        app:layout_constraintStart_toStartOf="@id/g_et_s"
        app:layout_constraintEnd_toEndOf="@id/g_et_e"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_ask"
        android:textSize="12sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/g_tv_ask_t"
        app:layout_constraintBottom_toBottomOf="@id/g_tv_ask_b"
        app:layout_constraintStart_toStartOf="@id/g_tv_ask_s"
        app:layout_constraintEnd_toEndOf="@id/g_tv_ask_e"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_k_"
        android:textSize="12sp"
        android:textColor="#002b5b"
        app:layout_constraintTop_toTopOf="@id/g_tv_ask_t"
        app:layout_constraintBottom_toBottomOf="@id/g_tv_ask_b"
        app:layout_constraintStart_toStartOf="@id/g_tv_ask_e"
        app:layout_constraintEnd_toEndOf="@id/g_tv_login_e"/>

</androidx.constraintlayout.widget.ConstraintLayout>