<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g_rogo_t"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.187" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g_email_t"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.454" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g_password_t"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.528" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g_login_t"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.601" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g_tv_register_t"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.677" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g_rogo_b"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.419" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g_email_b"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g_password_b"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.574" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g_login_b"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.649" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g__tv_register_b"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.698" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g_rogo_s"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.267" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g_email_s"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.153" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g_rogo_e"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.727" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g_email_e"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.847" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g_tv_register_e"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.502" />


        <ImageView
            android:id="@+id/rogo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/sg"
            app:layout_constraintTop_toTopOf="@id/g_rogo_t"
            app:layout_constraintBottom_toBottomOf="@id/g_rogo_b"
            app:layout_constraintStart_toStartOf="@id/g_rogo_s"
            app:layout_constraintEnd_toEndOf="@id/g_rogo_e" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:hint="@string/email"
            android:textSize="14sp"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toTopOf="@id/g_email_t"
            app:layout_constraintBottom_toBottomOf="@id/g_email_b"
            app:layout_constraintStart_toStartOf="@id/g_email_s"
            app:layout_constraintEnd_toEndOf="@id/g_email_e" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:hint="@string/password"
            android:textSize="14sp"
            android:inputType="textPassword"
            app:layout_constraintTop_toTopOf="@id/g_password_t"
            app:layout_constraintBottom_toBottomOf="@id/g_password_b"
            app:layout_constraintStart_toStartOf="@id/g_email_s"
            app:layout_constraintEnd_toEndOf="@id/g_email_e" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/login_k"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:background="@drawable/round_button"
            app:layout_constraintTop_toTopOf="@id/g_login_t"
            app:layout_constraintBottom_toBottomOf="@id/g_login_b"
            app:layout_constraintStart_toStartOf="@id/g_email_s"
            app:layout_constraintEnd_toEndOf="@id/g_email_e" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_k"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="#002C5C"
            app:layout_constraintTop_toTopOf="@id/g_tv_register_t"
            app:layout_constraintBottom_toBottomOf="@id/g__tv_register_b"
            app:layout_constraintStart_toStartOf="@id/g_rogo_s"
            app:layout_constraintEnd_toEndOf="@id/g_tv_register_e" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/find_password_k"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="#002C5C"
            android:gravity="end"
            app:layout_constraintTop_toTopOf="@id/g_tv_register_t"
            app:layout_constraintBottom_toBottomOf="@id/g__tv_register_b"
            app:layout_constraintStart_toStartOf="@id/g_tv_register_e"
            app:layout_constraintEnd_toEndOf="@id/g_rogo_e" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>